@@ -65,9 +65,37 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|fs
 operator|.
 name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HBaseConfiguration
 import|;
 end_import
 
@@ -996,6 +1024,53 @@ name|addr
 operator|.
 name|getHostName
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Test Case for HBASE-2305    */
+specifier|public
+name|void
+name|testShouldAssignDefaultZookeeperClientPort
+parameter_list|()
+block|{
+name|Configuration
+name|config
+init|=
+name|HBaseConfiguration
+operator|.
+name|create
+argument_list|()
+decl_stmt|;
+name|config
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|Properties
+name|p
+init|=
+name|HQuorumPeer
+operator|.
+name|makeZKProps
+argument_list|(
+name|config
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|p
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2181
+argument_list|,
+name|p
+operator|.
+name|get
+argument_list|(
+literal|"hbase.zookeeper.property.clientPort"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
